--- a/message.css
+++ b/message.css
@@ -14,3 +14,84 @@
     pointer-events:auto;
     box-shadow:inset 0px 0px 30px 2px rgba(0, 0, 0, 0.5), 0px 0px 3px 0px rgba(0, 0, 0, 0.75);
 }
+
+/*SETTINGS*/
+
+#messageCastSettingsStart {
+    display: flex;
+    position: relative;
+    top: 8.5%;
+    width: 100%;
+    height: 93%;
+    border: 2px solid #343434;
+    border-radius: 0.5em;
+    flex-wrap: wrap;
+  }
+
+.messageCastContainer {
+    width: 100%;
+    display: flex;
+    border-bottom: 2px solid rgb(80, 80, 80);
+    font-size: smaller;
+    color: #9c9c9c;
+    align-items: center;
+}
+
+.messageCastContainer:last-child {
+    border-bottom: 0;
+}
+
+.messageCastLabel {
+    text-align: center;
+    align-content: center;
+    word-wrap: break-word;
+    text-wrap: balance;
+    color: #9c9c9c;
+    overflow-y: auto;
+    overflow-x: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#allow\$Label {
+    width: 70%;
+}
+
+.messageCastToggleContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+}
+
+#allow\$ToggleContainer {
+    width: 30%;
+}
+
+.messageCastToggle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 80%;
+    word-break: break-word;
+    word-spacing: 100vw;
+    border: 2px solid;
+    border-radius: 0.5em;
+    margin-right: 2%;
+}
+
+.messageCastToggle:hover {
+    filter: brightness(1.3);
+}
+
+.messageCastToggleActive {
+    background-color: #033f03;
+}
+
+.messageCastToggleInactive {
+    background-color: #5a0606;
+}
+
