--- a/message.css
+++ b/message.css
@@ -54,7 +54,7 @@
     justify-content: center;
 }
 
-#allow\$Label {
+#allow\$Label, #allowWhitelistLabel {
     width: 70%;
 }
 
@@ -66,7 +66,7 @@
     height: 100%;
 }
 
-#allow\$ToggleContainer {
+#allow\$ToggleContainer, #allowWhitelistToggleContainer {
     width: 30%;
 }
 
@@ -93,5 +93,10 @@
 
 .messageCastToggleInactive {
     background-color: #5a0606;
+}
+
+#whitelistTutorialMacro {
+    color: #00b26e;
+    word-break: break-all;
 }
 
