--- a/message.css
+++ b/message.css
@@ -96,7 +96,68 @@
 }
 
 #whitelistTutorialMacro {
-    color: #00b26e;
+    color: #00b26e; /*just added in case you're missing your nature for some reason*/
+    user-select: text;
     word-break: break-all;
 }
 
+/*
+
+HELPER HERE
+
+*/
+
+#messageCastDropdownContainerStart {
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    width: 20%;
+    height: 10%;
+    top: -10%;
+    left: 40%;
+}
+
+#messageCastDropdownStart {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    background-color: #313131;
+    border: 2px solid rgba(255, 255, 255, 0.15);
+    border-radius: 0.5em 0.5em 0 0;
+    box-shadow: inset 0px 0px 30px 2px rgba(0, 0, 0, 0.15);
+    color: #9c9c9c;
+}
+
+.messageCastDropdownContentContainer {
+    position: relative;
+    width: 100%;
+    height: 1000%;
+    max-height: 1000%;
+    overflow-y: scroll;
+    pointer-events: none;
+    display: none;
+}
+
+.messageCastDropdown {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 10%;
+    background-color: #313131;
+    border: 2px solid rgba(255, 255, 255, 0.15);
+    border-top: 0;
+    overflow: hidden;
+    box-shadow: inset 0px 0px 30px 2px rgba(0, 0, 0, 0.15);
+    color: #9c9c9c;
+    pointer-events: auto;
+}
+
+.messageCastDropdown:hover, #messageCastDropdownStart {
+    filter: brightness(1.3);
+}
