--- a/message.css
+++ b/message.css
@@ -132,6 +132,38 @@ HELPER HERE
     color: #9c9c9c;
 }
 
+#messageCastDropdownStart:hover {
+    filter: brightness(1.3);
+}
+
+.messageCastDropdownContainer {
+    position: fixed;
+    display: block;
+    overflow-y: scroll;
+    overscroll-behavior: none;
+    user-select: none;
+    z-index: 16;
+}
+
+.messageCastDropdownItem {
+    width: 100%;
+    height: 10%;
+    background-color: #313131;
+    border: 2px solid rgba(255, 255, 255, 0.15);
+    border-top: 0;
+    box-shadow: inset 0px 0px 30px 2px rgba(0, 0, 0, 0.15);
+    color: #9c9c9c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.messageCastDropdownItem:last-child {
+    border-radius: 0 0 0.5em 0.5em;
+}
+
+/* Old and unused 
+
 .messageCastDropdownContentContainer {
     position: relative;
     width: 100%;
@@ -157,6 +189,8 @@ HELPER HERE
     pointer-events: auto;
 }
 
-.messageCastDropdown:hover, #messageCastDropdownStart:hover {
+.messageCastDropdown:hover {
     filter: brightness(1.3);
 }
+
+*/
