--- a/message.css
+++ b/message.css
@@ -132,7 +132,7 @@ HELPER HERE
     color: #9c9c9c;
 }
 
-#messageCastDropdownStart:hover {
+#messageCastDropdownStart:hover, .messageCastDropdownItem:hover {
     filter: brightness(1.3);
 }
 
@@ -143,6 +143,7 @@ HELPER HERE
     overscroll-behavior: none;
     user-select: none;
     z-index: 16;
+    pointer-events: none;
 }
 
 .messageCastDropdownItem {
@@ -156,10 +157,15 @@ HELPER HERE
     display: flex;
     justify-content: center;
     align-items: center;
+    pointer-events: all;
 }
 
 .messageCastDropdownItem:last-child {
     border-radius: 0 0 0.5em 0.5em;
+}
+
+.messageCastDropdownItem:first-child {
+    border-top: 2px solid rgba(255, 255, 255, 0.15);
 }
 
 /* Old and unused 
