--- a/message.css
+++ b/message.css
@@ -148,11 +148,12 @@ HELPER HERE
     user-select: none;
     z-index: 16;
     pointer-events: none;
+    font-size: small;
 }
 
 .messageCastDropdownItem {
     width: 100%;
-    height: 10%;
+    min-height: 10%;
     background-color: #313131;
     border: 2px solid rgba(255, 255, 255, 0.15);
     border-top: 0;
